# pion-uncurried

./: Cargo.toml  rustfmt.toml
crates/pion/: build.rs
crates/pion-salsa/: Cargo.toml
crates/pion-salsa/src/: lib.rs
crates/pion-salsa/src/cli/: batch.rs
crates/pion-salsa/src/core/: elab.rs  env.rs  eval.rs  mod.rs  quote.rs  syntax.rs  unelab.rs  unify.rs
crates/pion-salsa/src/ir/: diagnostic.rs  input_file.rs  mod.rs  span.rs  syntax.rs
crates/pion-salsa/src/surface/: errors.rs  mod.rs  parser.rs  pretty.rs  syntax.rs
crates/pion-salsa/src/surface/parser/: grammar.lalrpop  lexer.rs
crates/pion-salsa/src/tests/: elab.rs  mod.rs
crates/pion-salsa/test-data/elab/ok/: enum.pion  id.pion  match.pion  prelude.pion
crates/pion-salsa/tests/: test_runner.rs
crates/pion-salsa/tests/elab/ok/: dependent_match.expected  dependent_match.pion  dependent_match.pion.expected  enum.pion.expected  eq.pion  eq.pion.expected  id.expected  id.pion.expected  match.expected  match.pion.expected  prelude.expected  prelude.pion.expected
crates/pion/src/: cli.rs  grammar.lalrpop  lib.rs  tests.rs
pion-experiments/: Cargo.toml
pion-experiments/src/: env.rs  lib.rs  semantics.rs  surface.rs  typecheck.rs
src/: cli.rs  core.rs  diagnostic.rs  file.rs  grammar.lalrpop  lib.rs  main.rs  span.rs  surface.rs  symbol.rs  tests.rs
src/cli/: batch.rs
src/core/: conv.rs  elab.rs  env.rs  errors.rs  eval.rs  mod.rs  quote.rs  semantics.rs  syntax.rs  unelab.rs  unify.rs
src/core/elab/: expr.rs  item.rs  pat.rs
src/core/semantics/: binders.rs  (+1 more)
src/ir/: diagnostic.rs  mod.rs  span.rs  syntax.rs
src/surface/: errors.rs  lexer.rs  mod.rs  parser.rs  pretty.rs  syntax.rs
tests/: test_runner.rs
(+71 files in other folders)
