[package]
name = "pion"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
codespan-reporting = "0.11.1"
contracts = "0.6.3"
lalrpop-util = "0.19.8"
logos = "0.12.1"
pretty = "0.11.3"
rustyline = "10.0.0"
text-size = "1.1.0"

[build-dependencies]
lalrpop = "0.19.8"
