[package]
name = "pion-salsa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
codespan-reporting = "0.11.1"
contracts = "0.6.3"
lalrpop-util = "0.19.8"
logos = "0.12.1"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
text-size = "1.1.0"

[build-dependencies]
lalrpop = "0.19.8"

[dev-dependencies]
datatest = "0.7.1"
expect-test = "1.3.0"
